--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <title>CSS Heart </title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
+    <div class="heart"></div>
   </body>
 </html>
